# forgotten-city-of-xeo

./: .gitignore  Cargo.toml  README.md
Builds/LINUX/: .rustc_info.json
Builds/LINUX/release/.fingerprint/addr2line-53045e2288e87b1b/: lib-addr2line  lib-addr2line.json
Builds/LINUX/release/.fingerprint/adler-99cee3125e252f3c/: lib-adler  lib-adler.json
Builds/LINUX/release/.fingerprint/ahash-2d8de33d2e8d75ef/: run-build-script-build-script-build  run-build-script-build-script-build.json
Builds/LINUX/release/.fingerprint/ahash-a37852fde7c09ff7/: lib-ahash  lib-ahash.json
Builds/LINUX/release/.fingerprint/ahash-ba9ab3407daaf761/: build-script-build-script-build  build-script-build-script-build.json
Builds/LINUX/release/.fingerprint/aho-corasick-67851e34843beada/: lib-aho_corasick  lib-aho_corasick.json
Builds/LINUX/release/.fingerprint/allocator-api2-76276dfaeba04189/: lib-allocator-api2  lib-allocator-api2.json
Builds/LINUX/release/.fingerprint/anstream-348ac51798f8bd15/: lib-anstream  lib-anstream.json
Builds/LINUX/release/.fingerprint/anstyle-509f895c83f4b087/: lib-anstyle  lib-anstyle.json
Builds/lINUX/: forgotten-city-of-xeo.d
Builds/lINUX/data/: gamesettings.json
Builds/windows-build/: .rustc_info.json
Project_Metadata/: Chart_Map.xml
builds/windows-build/release/: forgotten-city-of-xeo.d
builds/windows-build/release/data/: gamesettings.json
data/: gamesettings.json  prompts.json  settings.json
src/: app.rs  chatbuild.rs  event.rs  game.rs  main.rs  promts.json  text.txt  tui.rs  ui.rs  update.rs
(+680 files in other folders)
